# eth_lottery

./: .gitattributes  .gitignore  Makefile  README.md  brownie-config.yaml  pyproject.toml  setup.cfg
contracts/: Lottery.sol
contracts/test/: LinkTokenMock.sol  VRFCoordinatorMock.sol
interfaces/: LinkTokenMockInterface.sol
scripts/: deploy.py
src/: constants.py  settings.py  utils.py
src/scripts/: lottery.py
tests/: conftest.py
tests/integration/: test_lottery.py
tests/unit/: test_lottery.py
